service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: example
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 4567
  selector:
    app: example
